--- a/slides/shared/themes/style/skew.css
+++ b/slides/shared/themes/style/skew.css
@@ -42,10 +42,10 @@
     .deck-container .slide span.code {
       font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
       margin: 0;
-      border: 1px solid #ddd;
+      border: 1px solid #ccc;
       background-color: #f8f8f8;
       border-radius: 3px;
-      padding: 0; }
+      padding: 1px 8px; }
     /* line 60, skew.scss */
     .deck-container .slide ::-moz-selection {
       background: #c00;
