--- a/slides/shared/themes/style/skew.scss
+++ b/slides/shared/themes/style/skew.scss
@@ -51,10 +51,10 @@
     span.code {
       font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
       margin: 0;
-      border: 1px solid #ddd;
+      border: 1px solid #ccc;
       background-color: #f8f8f8;
       border-radius: 3px;
-      padding: 0;
+      padding: 1px 8px;
     }
 
     ::-moz-selection{ background:#c00; color:#fff; }
