--- a/slides/shared/themes/style/skew.css
+++ b/slides/shared/themes/style/skew.css
@@ -1,7 +1,7 @@
 /* line 3, skew.scss */
 .deck-container {
   font-family: 'Montserrat', 'Helvetica Neue', sans-serif;
-  font-size: 1.75em;
+  font-size: 2em;
   background: #fff; }
   /* line 8, skew.scss */
   .deck-container .slide {
@@ -112,7 +112,7 @@
   .deck-container.deck-menu .deck-current, .no-touch .deck-container.deck-menu .slide:hover {
     background: #ddf; }
   /* line 142, skew.scss */
-  .deck-container .cover {
+  .deck-container .cover, .deck-container .cover-light {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -121,46 +121,70 @@
     -o-background-size: cover;
     background-size: cover; }
     /* line 151, skew.scss */
-    .deck-container .cover h1 {
+    .deck-container .cover h1, .deck-container .cover-light h1 {
       color: #fff;
       text-shadow: 0 5px 10px rgba(0, 0, 0, 0.7); }
-    /* line 156, skew.scss */
-    .deck-container .cover h2 {
+    /* line 155, skew.scss */
+    .deck-container .cover h2, .deck-container .cover-light h2 {
       color: #fff;
       border-bottom: none; }
-    /* line 161, skew.scss */
-    .deck-container .cover a, .deck-container .cover a:visited {
+    /* line 159, skew.scss */
+    .deck-container .cover a, .deck-container .cover-light a, .deck-container .cover a:visited, .deck-container .cover-light a:visited {
       color: #fff !important; }
+    /* line 162, skew.scss */
+    .deck-container .cover p, .deck-container .cover-light p, .deck-container .cover li, .deck-container .cover-light li {
+      color: #eee; }
     /* line 165, skew.scss */
-    .deck-container .cover p {
-      color: #999; }
-    /* line 169, skew.scss */
-    .deck-container .cover .shim {
+    .deck-container .cover .content, .deck-container .cover-light .content {
+      z-index: 99; }
+    /* line 168, skew.scss */
+    .deck-container .cover .shim, .deck-container .cover-light .shim {
+      z-index: -99;
       background: #000;
       position: absolute;
       left: 0;
       top: 0;
       bottom: 0;
       right: 0;
-      opacity: .3; }
-  /* line 180, skew.scss */
+      opacity: .6; }
+  /* line 182, skew.scss */
+  .deck-container .cover-light .shim {
+    background: #fff;
+    opacity: .7; }
+  /* line 186, skew.scss */
+  .deck-container .cover-light h1 {
+    color: #000; }
+  /* line 189, skew.scss */
+  .deck-container .cover-light h2 {
+    color: #1f4c7f; }
+  /* line 192, skew.scss */
+  .deck-container .cover-light h3 {
+    color: #444; }
+  /* line 195, skew.scss */
+  .deck-container .cover-light h1, .deck-container .cover-light h2, .deck-container .cover-light h3 {
+    text-shadow: 0 2px 0 rgba(255, 255, 255, 0.7); }
+  /* line 198, skew.scss */
+  .deck-container .cover-light a, .deck-container .cover-light a:visited, .deck-container .cover-light p, .deck-container .cover-light li {
+    color: #333;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7); }
+  /* line 204, skew.scss */
   .deck-container .title {
     background-color: #0F91DA; }
-    /* line 183, skew.scss */
+    /* line 207, skew.scss */
     .deck-container .title h1, .deck-container .title h2, .deck-container .title h3 {
       color: #fff; }
-  /* line 188, skew.scss */
+  /* line 212, skew.scss */
   .deck-container .home {
     background-image: url(../../resources/images/bleeding-edge.jpg); }
-  /* line 193, skew.scss */
+  /* line 217, skew.scss */
   .deck-container .browser-table td {
     text-align: center;
     width: 20%; }
-    /* line 197, skew.scss */
+    /* line 221, skew.scss */
     .deck-container .browser-table td img {
       height: 7em;
       margin-bottom: 0; }
-    /* line 201, skew.scss */
+    /* line 225, skew.scss */
     .deck-container .browser-table td p {
       margin-top: 15px;
       font-size: 2em; }
