--- a/slides/shared/themes/style/skew.css
+++ b/slides/shared/themes/style/skew.css
@@ -1,28 +1,29 @@
 /* line 3, skew.scss */
 .deck-container {
-  font-family: 'Montserrat', 'Helvetica Neue', sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 2em;
+  font-weight: 600;
   background: #fff; }
-  /* line 8, skew.scss */
+  /* line 9, skew.scss */
   .deck-container .slide {
     background: #fff; }
-    /* line 11, skew.scss */
+    /* line 12, skew.scss */
     .deck-container .slide h1 {
       color: #000;
       letter-spacing: -.05em; }
-    /* line 16, skew.scss */
+    /* line 17, skew.scss */
     .deck-container .slide h2 {
       color: #1f4c7f;
       border-bottom-color: #ccc;
       letter-spacing: -.05em; }
-    /* line 22, skew.scss */
+    /* line 23, skew.scss */
     .deck-container .slide h3 {
       color: #444;
       margin-bottom: .7em; }
-    /* line 28, skew.scss */
+    /* line 29, skew.scss */
     .deck-container .slide pre code {
       overflow: hidden; }
-    /* line 32, skew.scss */
+    /* line 33, skew.scss */
     .deck-container .slide blockquote {
       font-size: 1em;
       font-style: italic;
@@ -30,88 +31,89 @@
       color: #333;
       background: #f6f6f6;
       border-left: 5px solid #ccc; }
-      /* line 40, skew.scss */
+      /* line 41, skew.scss */
       .deck-container .slide blockquote p {
         margin: 0; }
-      /* line 44, skew.scss */
+      /* line 45, skew.scss */
       .deck-container .slide blockquote cite {
         font-size: .5em;
         font-style: normal;
         font-weight: bold;
         color: #888; }
-    /* line 52, skew.scss */
+    /* line 53, skew.scss */
     .deck-container .slide table.table td {
       border: 1px solid #ccc;
       padding: 5px; }
-    /* line 56, skew.scss */
+    /* line 57, skew.scss */
     .deck-container .slide thead td {
       font-weight: 800; }
-    /* line 60, skew.scss */
+    /* line 61, skew.scss */
     .deck-container .slide span.code {
       font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+      font-weight: 400;
       margin: 0;
       border: 1px solid #ccc;
       background-color: #f8f8f8;
       border-radius: 3px;
       padding: 1px 8px; }
-    /* line 69, skew.scss */
+    /* line 71, skew.scss */
     .deck-container .slide ::-moz-selection {
       background: #c00;
       color: #fff; }
-    /* line 70, skew.scss */
+    /* line 72, skew.scss */
     .deck-container .slide ::selection {
       background: #c00;
       color: #fff; }
-    /* line 72, skew.scss */
+    /* line 74, skew.scss */
     .deck-container .slide a {
       color: #1c68be !important; }
-      /* line 75, skew.scss */
+      /* line 77, skew.scss */
       .deck-container .slide a, .deck-container .slide a:hover, .deck-container .slide a:focus, .deck-container .slide a:active, .deck-container .slide a:visited {
         color: #c00;
         text-decoration: none; }
-      /* line 80, skew.scss */
+      /* line 82, skew.scss */
       .deck-container .slide a:hover, .deck-container .slide a:focus {
         text-decoration: underline; }
-    /* line 85, skew.scss */
+    /* line 87, skew.scss */
     .deck-container .slide li {
       line-height: 1.5em; }
-    /* line 89, skew.scss */
+    /* line 91, skew.scss */
     .deck-container .slide .strike {
       text-decoration: line-through; }
-    /* line 92, skew.scss */
+    /* line 94, skew.scss */
     .deck-container .slide .dim {
       opacity: .4; }
-  /* line 98, skew.scss */
+  /* line 100, skew.scss */
   .deck-container > .slide .deck-before, .deck-container > .slide .deck-previous {
     opacity: 0.4; }
-    /* line 102, skew.scss */
+    /* line 104, skew.scss */
     .deck-container > .slide .deck-before:not(.deck-child-current) .deck-before, .deck-container > .slide .deck-before:not(.deck-child-current) .deck-previous, .deck-container > .slide .deck-previous:not(.deck-child-current) .deck-before, .deck-container > .slide .deck-previous:not(.deck-child-current) .deck-previous {
       opacity: 1; }
-  /* line 108, skew.scss */
+  /* line 110, skew.scss */
   .deck-container > .slide .deck-child-current {
     opacity: 1; }
-  /* line 113, skew.scss */
+  /* line 115, skew.scss */
   .deck-container .deck-prev-link, .deck-container .deck-next-link {
     background: #ccc;
     font-family: serif; }
-    /* line 117, skew.scss */
+    /* line 119, skew.scss */
     .deck-container .deck-prev-link, .deck-container .deck-prev-link:hover, .deck-container .deck-prev-link:focus, .deck-container .deck-prev-link:active, .deck-container .deck-prev-link:visited, .deck-container .deck-next-link, .deck-container .deck-next-link:hover, .deck-container .deck-next-link:focus, .deck-container .deck-next-link:active, .deck-container .deck-next-link:visited {
       color: #fff; }
-    /* line 121, skew.scss */
+    /* line 123, skew.scss */
     .deck-container .deck-prev-link:hover, .deck-container .deck-prev-link:focus, .deck-container .deck-next-link:hover, .deck-container .deck-next-link:focus {
       background: #1f4c7f;
       text-decoration: none; }
-  /* line 127, skew.scss */
+  /* line 129, skew.scss */
   .deck-container .deck-status {
     font-size: 0.6666em;
     right: 15px; }
-  /* line 133, skew.scss */
+  /* line 135, skew.scss */
   .deck-container.deck-menu .slide {
     background: #eee; }
-  /* line 137, skew.scss */
+  /* line 139, skew.scss */
   .deck-container.deck-menu .deck-current, .no-touch .deck-container.deck-menu .slide:hover {
     background: #ddf; }
-  /* line 142, skew.scss */
+  /* line 144, skew.scss */
   .deck-container .cover, .deck-container .cover-light {
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -120,24 +122,24 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover; }
-    /* line 151, skew.scss */
+    /* line 153, skew.scss */
     .deck-container .cover h1, .deck-container .cover-light h1 {
       color: #fff;
       text-shadow: 0 5px 10px rgba(0, 0, 0, 0.7); }
-    /* line 155, skew.scss */
+    /* line 157, skew.scss */
     .deck-container .cover h2, .deck-container .cover-light h2 {
       color: #fff;
       border-bottom: none; }
-    /* line 159, skew.scss */
+    /* line 161, skew.scss */
     .deck-container .cover a, .deck-container .cover-light a, .deck-container .cover a:visited, .deck-container .cover-light a:visited {
       color: #fff !important; }
-    /* line 162, skew.scss */
+    /* line 164, skew.scss */
     .deck-container .cover p, .deck-container .cover-light p, .deck-container .cover li, .deck-container .cover-light li {
       color: #eee; }
-    /* line 165, skew.scss */
+    /* line 167, skew.scss */
     .deck-container .cover .content, .deck-container .cover-light .content {
       z-index: 99; }
-    /* line 168, skew.scss */
+    /* line 170, skew.scss */
     .deck-container .cover .shim, .deck-container .cover-light .shim {
       z-index: -99;
       background: #000;
@@ -147,44 +149,44 @@
       bottom: 0;
       right: 0;
       opacity: .6; }
-  /* line 182, skew.scss */
+  /* line 184, skew.scss */
   .deck-container .cover-light .shim {
     background: #fff;
     opacity: .7; }
-  /* line 186, skew.scss */
+  /* line 188, skew.scss */
   .deck-container .cover-light h1 {
     color: #000; }
-  /* line 189, skew.scss */
+  /* line 191, skew.scss */
   .deck-container .cover-light h2 {
     color: #1f4c7f; }
-  /* line 192, skew.scss */
+  /* line 194, skew.scss */
   .deck-container .cover-light h3 {
     color: #444; }
-  /* line 195, skew.scss */
+  /* line 197, skew.scss */
   .deck-container .cover-light h1, .deck-container .cover-light h2, .deck-container .cover-light h3 {
     text-shadow: 0 2px 0 rgba(255, 255, 255, 0.7); }
-  /* line 198, skew.scss */
+  /* line 200, skew.scss */
   .deck-container .cover-light a, .deck-container .cover-light a:visited, .deck-container .cover-light p, .deck-container .cover-light li {
     color: #333;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7); }
-  /* line 204, skew.scss */
+  /* line 206, skew.scss */
   .deck-container .title {
     background-color: #0F91DA; }
-    /* line 207, skew.scss */
+    /* line 209, skew.scss */
     .deck-container .title h1, .deck-container .title h2, .deck-container .title h3 {
       color: #fff; }
-  /* line 212, skew.scss */
+  /* line 214, skew.scss */
   .deck-container .home {
     background-image: url(../../resources/images/bleeding-edge.jpg); }
-  /* line 217, skew.scss */
+  /* line 219, skew.scss */
   .deck-container .browser-table td {
     text-align: center;
     width: 20%; }
-    /* line 221, skew.scss */
+    /* line 223, skew.scss */
     .deck-container .browser-table td img {
       height: 7em;
       margin-bottom: 0; }
-    /* line 225, skew.scss */
+    /* line 227, skew.scss */
     .deck-container .browser-table td p {
       margin-top: 15px;
       font-size: 2em; }
