--- a/slides/shared/themes/style/skew.scss
+++ b/slides/shared/themes/style/skew.scss
@@ -73,14 +73,15 @@
 
     a {
       color: rgb(28, 104, 190) !important;
+      border-bottom: 1px dashed #8FB2DA;
 
       &, &:hover, &:focus, &:active, &:visited {
         color:#c00;
-        text-decoration:none;
+        text-decoration: none;
       }
 
       &:hover, &:focus {
-        text-decoration:underline;
+        border-bottom: 2px solid #1c68be;
       }
     }
 
