--- a/slides/shared/themes/style/skew-dark.scss
+++ b/slides/shared/themes/style/skew-dark.scss
@@ -11,33 +11,36 @@
     background: #000000;
 
     h1 {
-      color: #cccccc;
+      color: #888888;
       letter-spacing: -.05em;
     }
-
     h2 {
       color: #D6B70A;
       border-bottom: 1px solid #D6B70A;
       letter-spacing: -.05em;
     }
-
     h3 {
-      color: #cccccc;
+      color: #888888;
       margin-bottom: .7em;
+    }
+    h4 {
+      color: #888888;
     }
 
     pre {
       code {
         overflow: hidden;
+        font-size: .9em;
+        letter-spacing: 1.5px;
       }
     }
     blockquote {
       font-size: 1em;
       font-style: italic;
       padding: .8em 3em .8em 1.5em;
-      color: #ffffff;
-      background: #555555;
-      border-left: 5px solid #ccc;
+      color: #cccccc;
+      background: #333333;
+      border-left: 5px solid #666666;
 
       p {
         margin:0;
