--- a/slides/shared/themes/style/skew-dark.scss
+++ b/slides/shared/themes/style/skew-dark.scss
@@ -66,6 +66,7 @@
       font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
       font-weight: 400;
       margin: 0;
+      color: #EC557B;
       border: 1px solid #777777;
       background-color: #222222;
       border-radius: 3px;
