--- a/slides/shared/themes/style/skew-dark.scss
+++ b/slides/shared/themes/style/skew-dark.scss
@@ -20,11 +20,11 @@
       letter-spacing: -.05em;
     }
     h3 {
-      color: #888888;
+      color: #cccccc;
       margin-bottom: .7em;
     }
     h4 {
-      color: #888888;
+      color: #cccccc;
     }
 
     pre {
