--- a/slides/shared/themes/style/skew-dark.scss
+++ b/slides/shared/themes/style/skew-dark.scss
@@ -35,11 +35,11 @@
       }
     }
     blockquote {
-      font-size: 1em;
+      font-size: .9em;
       font-style: italic;
       padding: .8em 3em .8em 1.5em;
       color: #cccccc;
-      background: #333333;
+      background: #1f1f1f;
       border-left: 5px solid #666666;
 
       p {
@@ -229,4 +229,17 @@
       }
     }
   }
+}
+
+// Prism (code formatting) overrides
+:not(pre) > code[class*="language-"] {
+  background: #2C2C2C;
+  padding: .1em .3em;
+  border-radius: .2em;
+}
+pre[class*="language-"] {
+  background: #1F1F1F;
+  border: 2px solid #333333;
+  border-radius: .2em;
+  padding: .3em .6em;
 }
